# protocol-core

./: Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: compute-budget-template.md  compute-budget.md
programs/entros-anchor/: Cargo.toml
programs/entros-anchor/src/: errors.rs  lib.rs  state.rs
programs/entros-registry/: Cargo.toml
programs/entros-registry/src/: errors.rs  lib.rs  state.rs
programs/entros-verifier/: Cargo.toml
programs/entros-verifier/src/: errors.rs  groth16_verifier.rs  lib.rs  mock_verifier.rs  state.rs
programs/iam-anchor/src/: errors.rs  lib.rs  state.rs
programs/iam-verifier/src/: errors.rs  groth16_verifier.rs  lib.rs  state.rs  verifying_key.rs
scripts/: cleanup-pdas.ts  devnet-airdrop.sh  init-registry.ts  makeComputeBudgetDoc.ts  set-validator-pubkey.ts
tests/: entros-anchor.ts  entros-verifier.ts  iam-anchor.ts  iam-verifier.ts  utils.ts  z-e2e.ts
tests-litesvm-ts/: clock-tests.ts  cu-budgets.ts  encodeDecode.ts  encrypted-baseline-tests.ts  litesvm-utils.ts  mint-receipt-tests.ts  reset-tests.ts  test-coverage.ts  token2022-expansion.ts  transfer-sol.ts  trustscore.ts  wallet-migration.ts
tests/fixtures/: test_proof.json
