[package]
name = "entros-anchor"
version = "0.1.0"
edition = "2021"
description = "Non-transferable identity token for Entros Protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "entros_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
debug-logs = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions", "associated_token"] }
blake3 = "=1.8.2"
spl-token-2022 = { version = "9", features = ["no-entrypoint"] }
solana-security-txt = "1.1.2"
