[package]
name = "entros-registry"
version = "0.1.0"
edition = "2021"
description = "Protocol registry, trust scoring, and validator management for Entros Protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "entros_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
debug-logs = []

[dependencies]
anchor-lang = "0.32.1"
solana-security-txt = "1.1.2"
