[package]
name = "entros-verifier"
version = "0.1.0"
edition = "2021"
description = "ZK proof verification program for Entros Protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "entros_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
debug-logs = []

[dependencies]
anchor-lang = "0.32.1"
groth16-solana = "=0.2.0"
solana-security-txt = "1.1.2"
